some spacing fixes

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -35,7 +35,7 @@ footer {
 }
 
 .card {
-  margin-top: 10px;
+  margin-top: 20px;
   margin-left: auto;
   margin-right: auto;
   display: block;
